--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ title:              DS4PS
 description:        Intro course in data programming in R
 
 # Site subpath, e.g. /blog
-url :               "http://ds4ps.org"
-baseurl:            "/ays-r-coding-sum-2025"
+url :               "https://jgreathouse9.github.io"
+baseurl:            "/Coding-in-R"
 course_url:         "http://ds4ps.org/ays-r-coding-sum-2025/"
 
 # Permalink URLs structure, for permalink style options see: https://jekyllrb.com/docs/permalinks/
