--- a/_config.yml
+++ b/_config.yml
@@ -35,9 +35,9 @@ header:
 - title: Schedule
   url: schedule/
 - title: iCourse 
+  url: https://ds4ps.org/cpp-526-fall-2019/textbook
+- title: Icollege
   url: https://gastate.view.usg.edu/d2l/home/3353358
-- title: Issues
-  url: https://github.com/DS4PS/ays-r-coding-sum-2025/issues
 
 
 
